--- a/Tests/UnitTests/Plugins/CMakeLists.txt
+++ b/Tests/UnitTests/Plugins/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory_if(Json ACTS_BUILD_PLUGIN_JSON)
 add_subdirectory_if(Sycl ACTS_BUILD_PLUGIN_SYCL)
 add_subdirectory_if(TGeo ACTS_BUILD_PLUGIN_TGEO)
 add_subdirectory_if(EDM4hep ACTS_BUILD_PLUGIN_EDM4HEP)
+add_subdirectory_if(Podio ACTS_BUILD_PLUGIN_PODIO)
