--- a/Plugins/Podio/edm.yml
+++ b/Plugins/Podio/edm.yml
@@ -54,8 +54,7 @@ components:
         - std::array<double, 36> measurementCovariance
         - uint32_t measdim;
 
-        - std::array<double, 36> jacobian
-        - bool hasJacobian
+        - uint32_t ijacobian
         - unsigned long long projector
         - bool hasProjector
 
@@ -69,6 +68,10 @@ components:
       Members:
         - std::array<double, 6> values
         - std::array<double, 36> covariance
+
+    ActsPodioEdm::JacobianInfo:
+      Members:
+        - std::array<double, 36> values
 
 datatypes:
   ActsPodioEdm::Track:
@@ -91,6 +94,12 @@ datatypes:
     Author : "Paul Gessinger, CERN"
     Members:
       - ActsPodioEdm::BoundParametersInfo data // parameter information
+
+  ActsPodioEdm::Jacobian:
+    Description: "Jacobian matrix from the previous track state to the current one"
+    Author : "Paul Gessinger, CERN"
+    Members:
+      - ActsPodioEdm::JacobianInfo data // the jacobian data
 
       # - int32_t type                         //flagword that defines the type of track.Bits 16-31 are used internally
       # - float chi2                       //Chi^2 of the track fit
