--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -185,7 +185,7 @@ set(_acts_autodiff_version 0.6)
 set(_acts_boost_version 1.71.0)
 set(_acts_dd4hep_version 1.21)
 set(_acts_edm4hep_version 0.7)
-set(_acts_podio_version 0.6)
+set(_acts_podio_version 0.16)
 set(_acts_doxygen_version 1.9.4)
 set(_acts_eigen3_version 3.3.7)
 set(_acts_hepmc3_version 3.2.1)
@@ -353,6 +353,7 @@ elseif(ACTS_BUILD_EXAMPLES_DD4HEP)
 endif()
 if(ACTS_BUILD_PLUGIN_EDM4HEP OR ACTS_BUILD_PLUGIN_PODIO)
   find_package(podio ${_acts_podio_version} REQUIRED CONFIG)
+  find_package(ROOT ${_acts_root_version} REQUIRED CONFIG COMPONENTS Core)
 endif()
 if(ACTS_BUILD_PLUGIN_EDM4HEP)
   find_package(EDM4HEP ${_acts_edm4hep_version} REQUIRED CONFIG)
