--- a/Plugins/Podio/edm.yml
+++ b/Plugins/Podio/edm.yml
@@ -55,7 +55,7 @@ components:
         - uint32_t measdim;
 
         - uint32_t ijacobian
-        - unsigned long long projector
+        - uint64_t projector
         - bool hasProjector
 
         - double chi2
