DIRTY HACK: TrackFittingAlgorithm writes podio tracks

--- a/Core/src/TrackFinding/CMakeLists.txt
+++ b/Core/src/TrackFinding/CMakeLists.txt
@@ -1,7 +1,7 @@
-target_sources(
-  ActsCore
-  PRIVATE
-    CombinatorialKalmanFilterError.cpp
-    MeasurementSelector.cpp
-    AmbiguityTrackClustering.cpp
-)
+# target_sources(
+  # ActsCore
+  # PRIVATE
+    # CombinatorialKalmanFilterError.cpp
+    # MeasurementSelector.cpp
+    # AmbiguityTrackClustering.cpp
+# )
