--- a/Core/CMakeLists.txt
+++ b/Core/CMakeLists.txt
@@ -119,6 +119,7 @@ add_subdirectory(src/Digitization)
 add_subdirectory(src/Definitions)
 add_subdirectory(src/Detector)
 add_subdirectory(src/Geometry)
+add_subdirectory(src/Navigation)
 add_subdirectory(src/MagneticField)
 add_subdirectory(src/Material)
 add_subdirectory(src/Propagator)
