--- a/Plugins/GeoModel/CMakeLists.txt
+++ b/Plugins/GeoModel/CMakeLists.txt
@@ -3,7 +3,9 @@ include(FetchContent)
 add_library(
   ActsPluginGeoModel SHARED
   src/GeoModelReader.cpp
-  src/GeoModelDetectorElement.cpp)
+  src/GeoModelDetectorElement.cpp
+  src/GeoModelDetectorSurfaceFactory.cpp
+  src/GeoModelSurfaceConverter.cpp)
 target_include_directories(
     ActsPluginGeoModel
   PUBLIC
