--- a/.github/workflows/analysis.yml
+++ b/.github/workflows/analysis.yml
@@ -32,6 +32,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install dependencies
+        run: sudo apt-get install -y unzip
+
       - name: Cache build
         uses: actions/cache@v4
         with:
