--- a/Tests/UnitTests/Core/Seeding/CMakeLists.txt
+++ b/Tests/UnitTests/Core/Seeding/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(ActsUnitTestSeedFinder SeedFinderTest.cpp)
+acts_add_executable(ActsUnitTestSeedFinder SeedFinderTest.cpp)
 target_link_libraries(ActsUnitTestSeedFinder PRIVATE ActsCore Boost::boost)
 
 add_unittest(EstimateTrackParamsFromSeed EstimateTrackParamsFromSeedTest.cpp)
