--- a/Tests/UnitTests/Plugins/Cuda/Seeding/CMakeLists.txt
+++ b/Tests/UnitTests/Plugins/Cuda/Seeding/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(ActsUnitTestSeedFinderCuda SeedFinderCudaTest.cpp)
+acts_add_executable(ActsUnitTestSeedFinderCuda SeedFinderCudaTest.cpp)
 target_link_libraries(
     ActsUnitTestSeedFinderCuda
     PRIVATE ${unittest_extra_libraries} Boost::boost
