--- a/Examples/Algorithms/Fatras/CMakeLists.txt
+++ b/Examples/Algorithms/Fatras/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(ActsExamplesFatras SHARED src/FatrasSimulation.cpp)
+acts_add_library(ActsExamplesFatras SHARED src/FatrasSimulation.cpp)
 target_include_directories(
     ActsExamplesFatras
     PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
