--- a/Examples/Io/NuclearInteractions/CMakeLists.txt
+++ b/Examples/Io/NuclearInteractions/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(
+acts_add_library(
     ActsExamplesIoNuclearInteractions
     SHARED
     src/RootNuclearInteractionParametersWriter.cpp
