--- a/Examples/Io/Performance/CMakeLists.txt
+++ b/Examples/Io/Performance/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(
+acts_add_library(
     ActsExamplesIoPerformance
     SHARED
     ActsExamples/Io/Performance/CKFPerformanceWriter.cpp
