--- a/Examples/Io/Svg/CMakeLists.txt
+++ b/Examples/Io/Svg/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(ActsExamplesIoSvg SHARED src/SvgTrackingGeometryWriter.cpp)
+acts_add_library(ActsExamplesIoSvg SHARED src/SvgTrackingGeometryWriter.cpp)
 target_include_directories(
     ActsExamplesIoSvg
     PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
