--- a/Plugins/ExaTrkX/CMakeLists.txt
+++ b/Plugins/ExaTrkX/CMakeLists.txt
@@ -22,7 +22,7 @@ if(ACTS_EXATRKX_ENABLE_TORCH)
     )
 endif()
 
-add_library(ActsPluginExaTrkX SHARED ${SOURCES})
+acts_add_library(ActsPluginExaTrkX SHARED ${SOURCES})
 
 target_include_directories(
     ActsPluginExaTrkX
