--- a/Plugins/Json/CMakeLists.txt
+++ b/Plugins/Json/CMakeLists.txt
@@ -1,6 +1,6 @@
 include(ActsTargetLinkLibrariesSystem)
 
-add_library(
+acts_add_library(
     ActsPluginJson
     SHARED
     src/AlgebraJsonConverter.cpp
