--- a/Tests/Benchmarks/CMakeLists.txt
+++ b/Tests/Benchmarks/CMakeLists.txt
@@ -3,7 +3,7 @@
 macro(add_benchmark _name)
     # automatically prefix the target name
     set(_target "ActsBenchmark${_name}")
-    add_executable(${_target} ${ARGN})
+    acts_add_executable(${_target} ${ARGN})
     # define required BOOST_TEST_... macros here to ensure consistent names
     target_compile_definitions(
         ${_target}
