--- a/.github/actions/dependencies/action.yml
+++ b/.github/actions/dependencies/action.yml
@@ -55,6 +55,5 @@ runs:
     - name: Create spack environment
       shell: bash
       run: |
-        spack env create -d spack_env spack.lock
-        spack env activate -d spack-env
-        spack install --use-buildcache only
+        spack env create -d . spack.lock
+        spack -e . install --use-buildcache only
