--- a/.github/actions/dependencies/action.yml
+++ b/.github/actions/dependencies/action.yml
@@ -55,5 +55,5 @@ runs:
     - name: Create spack environment
       shell: bash
       run: |
-        spack env create -d . spack.lock
-        spack -e . install --use-buildcache only
+        spack env create ci spack.lock
+        spack -e ci install --use-buildcache only
