--- a/.github/actions/dependencies/action.yml
+++ b/.github/actions/dependencies/action.yml
@@ -23,6 +23,12 @@ runs:
         git config user.email 41898282+github-actions[bot]@users.noreply.github.com
         curl https://patch-diff.githubusercontent.com/raw/spack/spack/pull/47370.patch | git am
 
+
+    - name: Add spack buildcache mirror
+      shell: bash
+      run: |
+        spack mirror add acts-spack-buildcache oci://ghcr.io/acts-project/spack-buildcache --unsigned
+
     - name: Locate OpenGL
       shell: bash
       run: "${GITHUB_ACTION_PATH}/opengl.sh"
