lock to xcode 16.1.0

--- a/.github/actions/dependencies/action.yml
+++ b/.github/actions/dependencies/action.yml
@@ -4,7 +4,7 @@ inputs:
   xcode-version:
     description: "Which Xcode version to use (only for macOS)"
     required: true
-    default: ""
+    default: "16.0.0"
   dependency-tag:
     description: "Which dependency tag to use"
     required: true
