--- a/.github/actions/dependencies/action.yml
+++ b/.github/actions/dependencies/action.yml
@@ -66,7 +66,9 @@ runs:
         spack -e ci find
         spack -e ci install --use-buildcache only
         ls -al
-        echo "PATH=$PWD/dependencies/bin:$PATH" >> "$GITHUB_ENV"
+        venv_dir="$PWD/dependencies/venv"
+        "$PWD/dependencies/bin/python3" -m venv "$venv_dir"
+        echo "PATH=$PWD/dependencies/venv/bin/:$PWD/dependencies/bin:$PATH" >> "$GITHUB_ENV"
 
     - name: Install Geant4 data
       shell: bash
