--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -40,7 +40,9 @@ jobs:
         uses: ./.github/actions/dependencies
 
       - run: env
-      - run: python3 -m pip install jinja2 pyyaml
+      - run: |
+          which python3
+          python3 -m pip install jinja2 pyyaml
 
       # - name: Restore ccache
       #   uses: actions/cache/restore@v4
