--- a/.github/actions/dependencies/action.yml
+++ b/.github/actions/dependencies/action.yml
@@ -69,6 +69,7 @@ runs:
         venv_dir="$PWD/dependencies/venv"
         "$PWD/dependencies/bin/python3" -m venv "$venv_dir"
         echo "PATH=$PWD/dependencies/venv/bin/:$PWD/dependencies/bin:$PATH" >> "$GITHUB_ENV"
+        ls -al "${venv_dir}/bin"
 
     - name: Install Geant4 data
       shell: bash
