--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -40,7 +40,11 @@ jobs:
         uses: ./.github/actions/dependencies
 
       - run: env
-      - run: |
+      - run:  |
+          ls -al
+          ls -al dependencies
+          ls -al dependencies/venv
+          ls -al dependencies/venv/bin
           which python3
           python3 -m pip install jinja2 pyyaml
 
